# cvx-rayopt

./: README.md  pyproject.toml
benchmarks/: benchmark_experiment.json  benchmarks_01.json  benchmarks_02.json  benchmarks_03.json  binary_projection.json  binary_projection_regularized.json  gridsearch_lambda.json  least_squares_regularized.json  linear_least_squares.json  linear_programming.json  matching_pursuit.json  radon.json
docs/: README.md
docs/assets/: figures.drawio
docs/readmes/: 01_problem_definition.md  02_least_squares.md  03_greedy.md  03_matching_pursuit.md  04_benchmark_and_analysis.md  05_binary_least_squares.md  06_linear_programming.md  07_linear_least_squares.md  08_image_preprocessing.md  09_line_rendering_analysis.md  10_stringart_ai.md  11_binary_projection_ls.md  12_least_squares_regularized.md  13_binary_projection_ls_reg.md  14_downsampling_operator.md  15_tuning_pegs_and_block_sizes.md  16_radon_transform.md
docs/slides/: reference.bib  sample.tex
docs/thesis/: 0-abstract.tex  0-appendix.tex  0-title.tex  1-introduction.tex  2-preliminary.tex  3-methodology.tex  4-performance-analysis.tex  5-summary.tex  bibliography.bib  main.tex
stringart/: cli_functions.py  main.py  solver.py
stringart/experiments/: benchmark_sandbox.py  binary_projection_ls.py  binary_projection_ls_regularized.py  downsampling_operator.py  gridsearch_lambda.py  image_preprocessing.py  least_squares_regularization.py  least_squares_regularized.py  least_squares_rounding.py  line_rendering.py  linear_least_squares.py  linear_least_squares_binary_uds.py  linear_programming.py  matrix_generator_sandbox.py  peg_optimization_analysis.py  radon_cantitative_tests.py  radon_quantitative_tests.py  radon_transform.py  wu_with_preprocessing.py
stringart/line/: bresenham.py  matrix.py
stringart/line_algorithms/: bresenham.py  matrix.py  xiaolin_wu.py
stringart/misc/: demo_animation.py  demo_benchmarks.py  generate_test_images.py  image_preprocessing.py  least_squares_rounding_trial.py  linear_least_squares.py  linear_programming.py  lp_sandbox.py  matrix_generator_sandbox.py  preprocess_xiaolin_wu.py  regularization_function_plots.py  upsampling_plot.py
stringart/mp/: greedy_selector.py  matching_pursuit.py
stringart/optimize/: downsampling.py  regularization.py
stringart/utils/: analysis.py  circle.py  greedy_selector.py  image.py  matching_pursuit.py  peg_optimizer.py  perf_analyzer.py  performance_analysis.py  regularization.py  time_and_memory_utils.py  time_memory_format.py  types.py
tests/: test_bresenham.py  test_matrix_operations.py  test_peg_placement.py  test_pipeline.py  test_xiaolin_wu.py
