[project]

name = "stringart"
version = "0.0.1"
authors = [
  { name="Adrian Mincu", email="mincu.adrian13@gmail.com" },
]

description = "StringArt is a Python-based package used to generate string art configurations from an input image."
readme = "README.md"

requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = []

[tool.pytest.ini_options]
minversion = "8.3"
addopts = "-ra"
testpaths = [
    "tests",
    "integration",
]

[project.urls]
Homepage = "https://github.com/skpha13/Procedural-Computing-of-String-Art/"
Issues = "https://github.com/skpha13/Procedural-Computing-of-String-Art/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["stringart", "stringart.*"]
